--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,10 +351,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 .div-block-5 {
   width: 100%;
-  height: 100%;
+  height: 50%;
   opacity: .34;
   background-image: linear-gradient(#28257e, #fff);
   position: absolute;
+  overflow: none!important;
 }
 audio, canvas, progress, video {
   vertical-align: baseline;
