--- a/style2.css
+++ b/style2.css
@@ -5799,7 +5799,7 @@ html {
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 0;
-    position: absolute;
+    position: relative;
     top: auto;
     bottom: auto;
     left: auto;
